welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: not found: value k
	     for(j <- 0 to y-1){setPos(j-k,0);ecritMessage(c);c=c+1}
                                         ^